style.css
/* ... */
    .hero .btn-primary { margin-inline: auto; }

/* Stats */

.stats { padding-block: var(--section-padding); }
.stats-list { display: grid; gap: 30px; }
.stats-card { 
    background: var(--bg-secondary); 
    display: flex; 
    align-items: center; 
    gap: 10px; 
    padding: 25px; 
    border-radius: var(--radius-12); 
    box-shadow: var(--shadow-1); 
    transition: var(--transition-1); 
}
    .stats-card:is(:hover, :focus) { transform: translateY(-5px); }
    .stats-card .card-icon { background: var(--raw-seinna); width: 60px; height: 60px; display: grid; place-items: center; border-radius: 50%; }
        .stats-card .card-icon img { width: 70%; filter: invert(1); }
    .stats-card .card-title { width: calc(100% - 95px); color: var(--raw-seinna); text-align: center; }
        .stats-card .card-title strong { display: block; color: var(--color-primary); font-size: initial; line-height: 1.3; margin-top: 5px; }
    .stats-card > ion-icon { color: var(--color-secondary); }

/* About */

.about { padding-block: var(--section-padding); }
.about-banner { max-width: 400px; margin-inline: auto; margin-bottom: 80px; }
    .about .btn { max-width: unset; width: 100%; }
    .about .btn-secondary { margin-bottom: 10px; }

/* Skills */

/* .skills { padding-block: var(--section-padding); }
.skills-content { margin-bottom: 50px; }
.skills-toggle { 
    background: var(--bg-secondary);
    position: relative;
    width: max-content;
    margin-inline: auto;
    display: flex;
    align-items: center;
    padding: 5px;
    border-radius: 100px;
    box-shadow: var(--shadow-1);
    z-index: 1;
}
    .skills-toggle::before {
        content: ''; 
        position: absolute; 
        top: 5px; 
        left: 5px; 
        bottom: 5px; 
        width: 93px; 
        background: var(--raw-seinna); 
        border-radius: 100px; 
        transition: var(--transition-1); 
        z-index: -1;
    }
        .skills-toggle.active::before { left: 92px; width: 93px; }
.toggle-btn { color: var(--color-primary); font-family: var(--ff-poppins); padding: 5px 25px; transition: var(--transition-1); }
    .toggle-btn.active { color: var(--white); }
.skills-box.active .skills-list, .skills-box .tools-list { display: none; }
.skills-box .skills-list, .skills-box.active .tools-list { display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: 15px; animation: fadeIn .5s ease-out forwards; }
    @keyframes fadeIn { 0% { opacity: 0; } 100% { opacity: 1; } }
.skills-card { 
    position: relative; 
    background: var(--bg-secondary); 
    width: 80px; 
    height: 80px; 
    display: grid; 
    place-items: center; 
    border-radius: var(--radius-12); 
    box-shadow: var(--shadow-1); 
    cursor: help; 
}
    .skills-card:hover .tooltip { transform: translateY(0); opacity: 1; } */

/* Projects */

.project { padding-block: var(--section-padding); }
.project-list > li { margin-bottom: 25px; }
.project-card { position: relative; overflow: hidden; border-radius: var(--radius-12); box-shadow: 2px 4px 6px hsla(0, 0%, 0%, 0.2); }
    .project-card::after { content: ''; position: absolute; inset: 0; border-radius: inherit; transition: var(--transition-1); }
    .project-card:is(:hover, :focus)::after { background: hsla(0, 0%, 100%, 0.1); cursor: pointer;}
    .project-card .card-content { position: absolute; bottom: 0; left: 0; width: 100%; padding: 20px; }
    .project-card .card-title { margin-bottom: 10px; }
        .project-card :is(.card-title, .publish-date){ 
            background: var(--bg-primary); 
            padding: 6px 12px; 
            width: max-content; 
            box-shadow: var(--shadow-1); 
            transform: translateY(20px); 
            opacity: 0; 
            transition: var(--transition-1);
        }
    .project-card .publish-date { font-size: var(--fs-6); color: var(--color-primary); transition-delay: 0s; }
            .project-card:is(:hover, :focus) :is(.card-title, .publish-date) { transform: translateY(0); opacity: 1; }
            .project-card:is(:hover, :focus) .publish-date { transition-delay: 0.1s; }
/* .load-more{ font-size: var(--fs-4); color: var(--raw-seinna); text-decoration: underline; margin-inline: auto; } */

.card-banner img {
    width: 100%;
    height: auto; /* Maintain aspect ratio */
}

.hidden-project {
    display: none;
}

/* Contact */
.contact { padding-block: var(--section-padding); }
.contact-content { margin-bottom: 50px; }
.contact-list-item { display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px; }
.contact-item-icon { font-size: 25px; color: var(--color-primary); }
    .contact-item-icon ion-icon { --ionicon-stroke-width: 40px; }
.contact-item-title { margin-bottom: 10px; }
    .contact-list-item .contact-info { color: var(--color-secondary); font-size: normal; line-height: 1.6; transition: var(--transition-1); }
        .contact-info:not(address):is(:hover, :focus) { color: var(--color-primary); }
.contact-social-list { display: flex; flex-wrap: wrap; justify-content: flex-start; align-items: center; gap: 15px; padding-inline: 40px; }
.contact-social-link { 
    position: relative; 
    background: var(--color-primary); 
    color: var(--bg-primary); 
    width: 35px; 
    height: 35px; 
    display: grid; 
    place-items: center; 
    border-radius: 50%; 
    transition: var(--transition-1); 
} 
    .contact-social-link:is(:hover, :focus) { background: var(--raw-seinna); color: var(--white); }
        .contact-social-link:is(:hover, :focus) .tooltip { transform: translateY(0); opacity: 1; }
.contact-form { background: var(--bg-secondary); padding: 20px; border-radius: var(--radius-12); box-shadow: var(--shadow-1); }
.form-wrapper { margin-bottom: 25px; }
.form-label { color: var(--color-primary); font-size: var(--fs-7); font-family: var(--ff-poppins); margin-bottom: 8px; margin-left: 5px; }
.input-wrapper { position: relative; }
/* ... */

